--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "connect-mongo": "^3.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-layouts": "^1.0.0",
     "express-session": "^1.17.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.8.9",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.2"
   },
   "scripts": {
